--- a/docs/research/jump_model_prod.ipynb
+++ b/docs/research/jump_model_prod.ipynb
@@ -6,14 +6,15 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "<module 'quantbullet.research.jump_model' from 'D:\\\\X1_图书馆\\\\New_Python_Library\\\\quantbullet\\\\src\\\\quantbullet\\\\research\\\\jump_model.py'>"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'quantbullet'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m/workspaces/quantbullet/docs/research/jump_model_prod.ipynb Cell 1\u001b[0m line \u001b[0;36m3\n\u001b[1;32m      <a href='vscode-notebook-cell://codespaces%2Bideal-capybara-rp66rg9pvx7fpqx7/workspaces/quantbullet/docs/research/jump_model_prod.ipynb#W0sdnNjb2RlLXJlbW90ZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mmatplotlib\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mpyplot\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mplt\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell://codespaces%2Bideal-capybara-rp66rg9pvx7fpqx7/workspaces/quantbullet/docs/research/jump_model_prod.ipynb#W0sdnNjb2RlLXJlbW90ZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mnumpy\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mnp\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell://codespaces%2Bideal-capybara-rp66rg9pvx7fpqx7/workspaces/quantbullet/docs/research/jump_model_prod.ipynb#W0sdnNjb2RlLXJlbW90ZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mquantbullet\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mresearch\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mjump_model\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mjm\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell://codespaces%2Bideal-capybara-rp66rg9pvx7fpqx7/workspaces/quantbullet/docs/research/jump_model_prod.ipynb#W0sdnNjb2RlLXJlbW90ZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mquantbullet\u001b[39;00m \u001b[39mimport\u001b[39;00m set_package_log_level\n\u001b[1;32m      <a href='vscode-notebook-cell://codespaces%2Bideal-capybara-rp66rg9pvx7fpqx7/workspaces/quantbullet/docs/research/jump_model_prod.ipynb#W0sdnNjb2RlLXJlbW90ZQ%3D%3D?line=4'>5</a>\u001b[0m set_package_log_level(\u001b[39m'\u001b[39m\u001b[39mdebug\u001b[39m\u001b[39m'\u001b[39m)\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'quantbullet'"
+     ]
     }
    ],
    "source": [
@@ -963,7 +964,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.10.8"
   },
   "orig_nbformat": 4
  },
