update the time weighted xgboost

--- a/docs/model_selection/xgboost_prod.ipynb
+++ b/docs/model_selection/xgboost_prod.ipynb
@@ -1,18 +1,27 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Model Selection using Optuna"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import xgboost as xgb\n",
-    "from sklearn.datasets import fetch_california_housing\n",
-    "from sklearn.model_selection import GridSearchCV\n",
-    "from sklearn.metrics import mean_squared_error\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "from quantbullet.model_selection import CrossValidationResult, OptunaStudyResult"
+    "import matplotlib.pyplot as plt\n",
+    "from scipy.interpolate import griddata\n",
+    "from sklearn.datasets import fetch_california_housing\n",
+    "from sklearn.metrics import mean_squared_error\n",
+    "from sklearn.model_selection import GridSearchCV\n",
+    "import xgboost as xgb\n",
+    "from quantbullet.model_selection import CrossValidationResult, OptunaStudyResult, OptunaCVOptimizer"
    ]
   },
   {
@@ -24,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,58 +77,157 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "# grid_search.fit(X, y)\n",
     "# import pickle\n",
     "# with open('xgboost_prod.pkl', 'wb') as f:\n",
-    "#     pickle.dump(grid_search, f)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "#     pickle.dump(grid_search, f)\n",
     "import pickle\n",
     "with open('xgboost_grid_search_9600.pkl', 'rb') as f:\n",
     "    grid_search = pickle.load(f)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The `CrossValidationResult` stores the results of a cross validation run, and provides some convenience methods for accessing the results."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Best parameters: {'alpha': 10, 'learning_rate': 0.2, 'max_depth': 5, 'min_split_loss': 0, 'n_estimators': 70}\n",
-      "Best score: -0.38582922255606994\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>alpha</th>\n",
+       "      <th>learning_rate</th>\n",
+       "      <th>max_depth</th>\n",
+       "      <th>min_split_loss</th>\n",
+       "      <th>n_estimators</th>\n",
+       "      <th>mean_test_score</th>\n",
+       "      <th>mean_train_score</th>\n",
+       "      <th>std_test_score</th>\n",
+       "      <th>std_train_score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1703</th>\n",
+       "      <td>10</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>70</td>\n",
+       "      <td>-0.385829</td>\n",
+       "      <td>-0.180601</td>\n",
+       "      <td>0.030088</td>\n",
+       "      <td>0.009165</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1704</th>\n",
+       "      <td>10</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>100</td>\n",
+       "      <td>-0.388208</td>\n",
+       "      <td>-0.165381</td>\n",
+       "      <td>0.034660</td>\n",
+       "      <td>0.008203</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1109</th>\n",
+       "      <td>5</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>100</td>\n",
+       "      <td>-0.388724</td>\n",
+       "      <td>-0.195844</td>\n",
+       "      <td>0.038837</td>\n",
+       "      <td>0.011213</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1708</th>\n",
+       "      <td>10</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>70</td>\n",
+       "      <td>-0.389089</td>\n",
+       "      <td>-0.206209</td>\n",
+       "      <td>0.033627</td>\n",
+       "      <td>0.009055</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1709</th>\n",
+       "      <td>10</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>100</td>\n",
+       "      <td>-0.389089</td>\n",
+       "      <td>-0.206209</td>\n",
+       "      <td>0.033627</td>\n",
+       "      <td>0.009055</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      alpha  learning_rate  max_depth  min_split_loss  n_estimators  \\\n",
+       "1703     10            0.2          5               0            70   \n",
+       "1704     10            0.2          5               0           100   \n",
+       "1109      5            0.1          5               1           100   \n",
+       "1708     10            0.2          5               1            70   \n",
+       "1709     10            0.2          5               1           100   \n",
+       "\n",
+       "      mean_test_score  mean_train_score  std_test_score  std_train_score  \n",
+       "1703        -0.385829         -0.180601        0.030088         0.009165  \n",
+       "1704        -0.388208         -0.165381        0.034660         0.008203  \n",
+       "1109        -0.388724         -0.195844        0.038837         0.011213  \n",
+       "1708        -0.389089         -0.206209        0.033627         0.009055  \n",
+       "1709        -0.389089         -0.206209        0.033627         0.009055  "
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(\"Best parameters:\", grid_search.best_params_)\n",
-    "print(\"Best score:\", grid_search.best_score_)"
+    "df = CrossValidationResult(grid_search.cv_results_).cv_scores_df()\n",
+    "df.sort_values('mean_test_score', ascending=False).head(5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = CrossValidationResult(grid_search.cv_results_).cv_scores_df()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -134,10 +242,6 @@
     }
    ],
    "source": [
-    "import numpy as np\n",
-    "from scipy.interpolate import griddata\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
     "# Create grid values\n",
     "x_grid, y_grid = np.meshgrid(np.linspace(df['max_depth'].min(), df['max_depth'].max(), 100),\n",
     "                             np.linspace(df['n_estimators'].min(), df['n_estimators'].max(), 100))\n",
@@ -156,8 +260,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The `partial_cv_scores` method compresses the results to one dimension by averaging the results across folds. Though this cannot provide information about the global optimum, it can be useful for checking the general trend."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -183,12 +294,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 35,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "from quantbullet.model_selection import OptunaCVOptimizer, OptunaStudyResult"
+    "Another wrapper for hyperparameter tuning package `Optuna` is implemented to provide a more concise way to tune the hyperparameters, and we don't need to explicitly define the objective function."
    ]
   },
   {
@@ -197,14 +306,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import xgboost\n",
-    "from sklearn.datasets import fetch_california_housing\n",
-    "\n",
-    "\n",
     "data = fetch_california_housing()\n",
     "X, y = data.data, data.target\n",
     "optimizer = OptunaCVOptimizer(X, y,\n",
-    "                              xgboost.XGBRegressor(),\n",
+    "                              xgb.XGBRegressor(),\n",
     "                              objective='reg:squarederror',\n",
     "                              scoring='neg_mean_squared_error', cv=5)"
    ]
@@ -347,6 +452,13 @@
    "metadata": {},
    "source": [
     "## Overfitting Example"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This is an example of overfitting, and shows how to use cross validation to choose the best model. An arbitrarily deep tree can always achieve perfect accuracy on the training set, and can easily overfit."
    ]
   },
   {
