start the dev of mean reversion strategy

--- a/docs/research/momentum_dev.ipynb
+++ b/docs/research/momentum_dev.ipynb
@@ -2,16 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[92m+-------------------------+\u001b[0m\n",
+      "|  Package : quantbullet  |\n",
+      "|  Author  : Yiming Zhang |\n",
+      "|  Version : 0.1.0        |\n",
+      "|  Note    : BETA version |\n",
+      "\u001b[92m+-------------------------+\u001b[0m\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "<module 'quantbullet.research.momentum' from '/home/yiming/dev/quantbullet/src/quantbullet/research/momentum.py'>"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -463,6 +475,234 @@
     "        ylabel1='Price',\n",
     "        ylabel2='Cumulative Return',\n",
     "    );"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Mean Reversion Strategy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ff5 = pd.read_pickle('fama_french_five_factors_20180101_20231231.pkl')\n",
+    "tsla = pd.read_pickle('tsla_20180101_20231231.pkl')['Adj Close']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class SimpleMarketDataProvider:\n",
+    "    def __init__(self, data):\n",
+    "        # check if data has an index\n",
+    "        if not isinstance(data.index, pd.DatetimeIndex):\n",
+    "            raise ValueError('Data must have a datetime index')\n",
+    "        # check the monotonicity of the index\n",
+    "        if not data.index.is_monotonic_increasing:\n",
+    "            raise ValueError('Index must be sorted')\n",
+    "        self.data = data\n",
+    "        self.start = data.index[0]\n",
+    "        self.end = data.index[-1]\n",
+    "        \n",
+    "    def get_historical_data(self, start_date, end_date):\n",
+    "        # if start_date is not provided, set it to the start of the data\n",
+    "        if start_date is None or start_date == '':\n",
+    "            start_date = self.start\n",
+    "        return self.data.loc[start_date:end_date]\n",
+    "    \n",
+    "class BacktestingCalendar:\n",
+    "    def __init__(self, dates):\n",
+    "        # turn the dates into a pandas index for easier get_loc\n",
+    "        self.dates = pd.Index(dates)\n",
+    "        self.current_date = None\n",
+    "        self.current_index = None\n",
+    "        self.length = len(dates)\n",
+    "        self.start = dates[0]\n",
+    "        self.end = dates[-1]\n",
+    "        \n",
+    "    def set_current_date(self, date):\n",
+    "        if date in self.dates:\n",
+    "            self.current_date = date\n",
+    "            self.current_index = self.dates.get_loc(date)\n",
+    "        else:\n",
+    "            raise ValueError('Date not in the calendar')\n",
+    "        \n",
+    "    def __iter__(self):\n",
+    "        self.current_date = self.start\n",
+    "        self.current_index = 0\n",
+    "        return self\n",
+    "    \n",
+    "    def __next__(self):\n",
+    "        if self.current_index < self.length:\n",
+    "            self.current_date = self.dates[self.current_index]\n",
+    "            self.current_index += 1\n",
+    "            return self.current_date\n",
+    "        else:\n",
+    "            raise StopIteration"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "provider = SimpleMarketDataProvider(ff5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tsla.index.isin(ff5.index).all() and ff5.index.isin(tsla.index).all()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "Dates must be a sorted datetime index",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m/home/yiming/dev/quantbullet/docs/research/momentum_dev.ipynb Cell 34\u001b[0m line \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/yiming/dev/quantbullet/docs/research/momentum_dev.ipynb#Y101sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m calendar \u001b[39m=\u001b[39m BacktestingCalendar(ff5\u001b[39m.\u001b[39;49mindex\u001b[39m.\u001b[39;49mdate)\n",
+      "\u001b[1;32m/home/yiming/dev/quantbullet/docs/research/momentum_dev.ipynb Cell 34\u001b[0m line \u001b[0;36m2\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/yiming/dev/quantbullet/docs/research/momentum_dev.ipynb#Y101sZmlsZQ%3D%3D?line=21'>22</a>\u001b[0m     dates \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mDatetimeIndex(dates)\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/yiming/dev/quantbullet/docs/research/momentum_dev.ipynb#Y101sZmlsZQ%3D%3D?line=22'>23</a>\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39misinstance\u001b[39m(dates, pd\u001b[39m.\u001b[39mDatetimeIndex):\n\u001b[0;32m---> <a href='vscode-notebook-cell:/home/yiming/dev/quantbullet/docs/research/momentum_dev.ipynb#Y101sZmlsZQ%3D%3D?line=23'>24</a>\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\u001b[39m'\u001b[39m\u001b[39mDates must be a sorted datetime index\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/yiming/dev/quantbullet/docs/research/momentum_dev.ipynb#Y101sZmlsZQ%3D%3D?line=24'>25</a>\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdates \u001b[39m=\u001b[39m dates\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/yiming/dev/quantbullet/docs/research/momentum_dev.ipynb#Y101sZmlsZQ%3D%3D?line=25'>26</a>\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcurrent_date \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m\n",
+      "\u001b[0;31mValueError\u001b[0m: Dates must be a sorted datetime index"
+     ]
+    }
+   ],
+   "source": [
+    "calendar = BacktestingCalendar(ff5.index.date)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "isinstance(ff5.index.date, pd.DatetimeIndex)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import datetime"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ff5.index = ff5.index.date"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ff5.index.get_loc(datetime.date(2018, 1, 4))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "pandas.core.indexes.base.Index"
+      ]
+     },
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(ff5.index)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 107,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.Index(ff5.index).get_loc(datetime.date(2018, 1, 12))"
    ]
   }
  ],
