--- a/docs/research/momentum_dev.ipynb
+++ b/docs/research/momentum_dev.ipynb
@@ -76,18 +76,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 68,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# activate the autoreload of modules\n",
     "%load_ext autoreload\n",
@@ -486,7 +477,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -496,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -521,6 +522,8 @@
     "class BacktestingCalendar:\n",
     "    def __init__(self, dates):\n",
     "        # turn the dates into a pandas index for easier get_loc\n",
+    "        if isinstance(dates, pd.DatetimeIndex) and dates.dtype == '<M8[ns]':\n",
+    "            dates = dates.date\n",
     "        self.dates = pd.Index(dates)\n",
     "        self.current_date = None\n",
     "        self.current_index = None\n",
@@ -535,9 +538,25 @@
     "        else:\n",
     "            raise ValueError('Date not in the calendar')\n",
     "        \n",
-    "    def __iter__(self):\n",
+    "    def get_offset_date(self, offset):\n",
+    "        return self.dates[self.current_index + offset]\n",
+    "    \n",
+    "    def get_current_date(self):\n",
+    "        return self.current_date\n",
+    "        \n",
+    "    def fresh_start(self):\n",
     "        self.current_date = self.start\n",
     "        self.current_index = 0\n",
+    "\n",
+    "    def __str__(self) -> str:\n",
+    "        return f'BacktestingCalendar({self.start}, {self.end}), current date: {self.current_date}'\n",
+    "    \n",
+    "    def __repr__(self) -> str:\n",
+    "        return str(self)\n",
+    "\n",
+    "    def __iter__(self):\n",
+    "        if self.current_date is None or self.current_index is None:\n",
+    "            raise ValueError('Current date / index is not set')\n",
     "        return self\n",
     "    \n",
     "    def __next__(self):\n",
@@ -546,163 +565,84 @@
     "            self.current_index += 1\n",
     "            return self.current_date\n",
     "        else:\n",
+    "            self.current_date = None\n",
+    "            self.current_index = None\n",
     "            raise StopIteration"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "provider = SimpleMarketDataProvider(ff5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 49,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "tsla.index.isin(ff5.index).all() and ff5.index.isin(tsla.index).all()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 78,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "Dates must be a sorted datetime index",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m/home/yiming/dev/quantbullet/docs/research/momentum_dev.ipynb Cell 34\u001b[0m line \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/yiming/dev/quantbullet/docs/research/momentum_dev.ipynb#Y101sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m calendar \u001b[39m=\u001b[39m BacktestingCalendar(ff5\u001b[39m.\u001b[39;49mindex\u001b[39m.\u001b[39;49mdate)\n",
-      "\u001b[1;32m/home/yiming/dev/quantbullet/docs/research/momentum_dev.ipynb Cell 34\u001b[0m line \u001b[0;36m2\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/yiming/dev/quantbullet/docs/research/momentum_dev.ipynb#Y101sZmlsZQ%3D%3D?line=21'>22</a>\u001b[0m     dates \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mDatetimeIndex(dates)\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/yiming/dev/quantbullet/docs/research/momentum_dev.ipynb#Y101sZmlsZQ%3D%3D?line=22'>23</a>\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39misinstance\u001b[39m(dates, pd\u001b[39m.\u001b[39mDatetimeIndex):\n\u001b[0;32m---> <a href='vscode-notebook-cell:/home/yiming/dev/quantbullet/docs/research/momentum_dev.ipynb#Y101sZmlsZQ%3D%3D?line=23'>24</a>\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\u001b[39m'\u001b[39m\u001b[39mDates must be a sorted datetime index\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/yiming/dev/quantbullet/docs/research/momentum_dev.ipynb#Y101sZmlsZQ%3D%3D?line=24'>25</a>\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdates \u001b[39m=\u001b[39m dates\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/yiming/dev/quantbullet/docs/research/momentum_dev.ipynb#Y101sZmlsZQ%3D%3D?line=25'>26</a>\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcurrent_date \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m\n",
-      "\u001b[0;31mValueError\u001b[0m: Dates must be a sorted datetime index"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[92m+-------------------------+\u001b[0m\n",
+      "|  Package : quantbullet  |\n",
+      "|  Author  : Yiming Zhang |\n",
+      "|  Version : 0.1.0        |\n",
+      "|  Note    : BETA version |\n",
+      "\u001b[92m+-------------------------+\u001b[0m\n"
      ]
     }
    ],
    "source": [
-    "calendar = BacktestingCalendar(ff5.index.date)"
+    "import datetime\n",
+    "import quantbullet as qb\n",
+    "import importlib\n",
+    "importlib.reload(qb)\n",
+    "from collections import namedtuple"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 80,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "isinstance(ff5.index.date, pd.DatetimeIndex)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 258,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import datetime"
+    "tsla_log_ret = qb.compute_log_returns(tsla)\n",
+    "calendar = BacktestingCalendar(tsla.index)\n",
+    "ff5_provider = SimpleMarketDataProvider(ff5)\n",
+    "tsla_provider = SimpleMarketDataProvider(tsla_log_ret)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 180,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ff5.index = ff5.index.date"
+    "# X = ff5_provider.get_historical_data('2021-01-01', '2021-12-31')\n",
+    "# y = tsla_provider.get_historical_data('2021-01-01', '2021-12-31')\n",
+    "# model = qb.ols_regression(X, y)\n",
+    "# model.summary()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2"
-      ]
-     },
-     "execution_count": 99,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ff5.index.get_loc(datetime.date(2018, 1, 4))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 103,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "pandas.core.indexes.base.Index"
-      ]
-     },
-     "execution_count": 103,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "type(ff5.index)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 296,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 107,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "8"
-      ]
-     },
-     "execution_count": 107,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "pd.Index(ff5.index).get_loc(datetime.date(2018, 1, 12))"
+    "res = list()\n",
+    "OFFSET_DAYS = 125\n",
+    "calendar.set_current_date(datetime.date(2021, 1, 4))\n",
+    "OBS = namedtuple('OBS', ['date', 'resid', 'rsquared', 'f_pvalue'])\n",
+    "for date in calendar:\n",
+    "    backtest_start = calendar.get_offset_date(-OFFSET_DAYS)\n",
+    "    backtest_end = date\n",
+    "    X = ff5_provider.get_historical_data(backtest_start, backtest_end)\n",
+    "    y = tsla_provider.get_historical_data(backtest_start, backtest_end)\n",
+    "    X.index = X.index.date\n",
+    "    y.index = y.index.date\n",
+    "    model = qb.ols_regression(X, y)\n",
+    "    obs = OBS(date=date,\n",
+    "              resid=model.resid.loc[date], \n",
+    "              rsquared=model.rsquared, \n",
+    "              f_pvalue=model.f_pvalue)\n",
+    "    res.append(obs)"
    ]
   }
  ],
